<resources>
    <string name="app_name">Cativo</string>
    <string name="title_profile">Profile</string>
    <string name="title_explore">Explore</string>
    <string name="title_watch">ToWatch</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_settings">Settings</string>
    <string name="title_login">Login</string>
    <string name="title_logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
