<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      tools:context=".activities.BaseActivity">
    <item
        android:id="@+id/toolbar_menu"
        android:icon="@drawable/menu_white_24dp"
        android:title="Menu"
        app:showAsAction="always"
        >
        <menu>
            <item
                android:id="@+id/navigation_profile"
                android:icon="@drawable/profile_white_24"
                android:title="@string/title_profile"
                app:showAsAction="never"/>

            <item
                android:id="@+id/navigation_explore"
                android:icon="@drawable/explore_white_24"
                android:title="@string/title_explore"
                app:showAsAction="never"/>

            <item
                android:id="@+id/navigation_watch"
                android:icon="@drawable/watch_white_24"
                android:title="@string/title_watch"
                app:showAsAction="never"/>

            <item
                android:id="@+id/navigation_calendar"
                android:icon="@drawable/calendar_white_24"
                android:title="@string/title_calendar"
                app:showAsAction="never"/>

            <item
                android:id="@+id/navigation_settings"
                android:icon="@drawable/settings_white_24"
                android:title="@string/title_settings"
                app:showAsAction="never"/>

            <item
                android:id="@+id/navigation_logout"
                android:icon="@drawable/logout_white_24"
                android:title="@string/title_logout"
                app:showAsAction="never"/>
        </menu>
    </item>


</menu>
